Revision history for Mason-Tidy

** denotes an incompatible change

2.53  Sep 15, 2012

2.52  Sep 15, 2012

- Add missing dependencies Capture::Tiny, File::Temp, IPC::System::Simple

2.51  Sep 14, 2012

- Fix various bugs in CLI
- Use --noprofile in tests so that user's .perltidyrc doesn't break tests [Pedro Melo]
- Add get_options to parse argv outside CLI
- Add Test::Class::Most dependency

2.50  Sep 12, 2012

- Increase version number to avoid indexing problems w/old Mason 2 distributions
- Declare --perltidy-argv, etc., to take a string value

0.01  Sep 12, 2012

- Initial version
